# twocells

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/nets/: mnist.py
src/twocells/: __init__.py  loss.py  nn.py  optim.py  tensor.py
src/twocells/utils/: dataset_utils.py  debug_utils.py  tensor_utils.py
